--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
             </article>
         </div>
     </section>
+
+    <!-- features starts here -->
     <section class="features-section">
         <div class="features-header">
             <h2>Join us at DeeCee, where educational <br>excellence meets limitless possibilities.</h2>
@@ -304,5 +306,36 @@
 
 
 </body>
+<section class="review-container">
+    <div class="reviews-head">
+        <h1>What our students say</h1>
+        <p>Through the Words of Our Community.</p>
+    </div>
+    <div class="reviews">
+        <div class="review-card">
+            <p class="review-text">“Sir when I watch your video I get attached to you. Sir your explanation of chapter are so amazing.”</p>
+            <div class="review-author">
+                <h4>Jai Shankar Jha</h4>
+            </div>
+        </div>
+
+        <div class="review-card">
+            <p class="review-text">“Rajat sir you are a really great personality. I admire you alot. Be it teaching or normal guidance, you give your 200% to help us and we have a special bond.”</p>
+            <div class="review-author">
+                <h4>Divyansh Gupta</h4>
+            </div>
+        </div>
+        <div class="review-card">
+            <p class="review-text">“No words can express my gratitude to you sir. I have never seen any teacher so sweet and kind hearted like you. I always pray to God to keep you healthy you. Love you. You are the best.”</p>
+            <div class="review-author">
+                <h4>Komal Bhatt</h4>
+            </div>
+        </div>
+
+    </div>
+
+
+
+</section>
 
 </html>
